--- a/public/style.css
+++ b/public/style.css
@@ -134,35 +134,19 @@ label {
   cursor: pointer;
 }
 
-body {
-  font-family: Arial, Helvetica, sans-serif;
-}
-
 * {
   box-sizing: border-box;
 }
 
 /* Button used to open the contact form - fixed at the bottom of the page */
 
-.open-button {
-  background-color: #555;
-  color: white;
-  padding: 16px 20px;
-  border: none;
-  cursor: pointer;
-  opacity: 0.8;
-  position: fixed;
-  bottom: 23px;
-  right: 28px;
-  width: 280px;
-}
 
 /* The popup form - hidden by default */
 
 .form-popup {
   display: none;
-  position: fixed;
-  bottom: 0;
+  position:fixed;
+  bottom: 10;
   right: 15px;
   border: 3px solid #f1f1f1;
   z-index: 9;
@@ -193,23 +177,11 @@ body {
   outline: none;
 }
 
-/* Set a style for the submit/login button */
-
-.form-container .btn {
-  background-color: #4CAF50;
-  color: white;
-  padding: 16px 20px;
-  border: none;
-  cursor: pointer;
-  width: 100%;
-  margin-bottom: 10px;
-  opacity: 0.8;
-}
-
 /* Add a red background color to the cancel button */
 
 .form-container .cancel {
-  background-color: red;
+  border: 2px solid red;
+  color: red;
 }
 
 /* Add some hover effects to buttons */
