--- a/public/style.css
+++ b/public/style.css
@@ -206,4 +206,6 @@ label {
   border-bottom : solid;
   border-top-width : 3px;
   background-color: rgb(141, 30, 104);
+  width: 300px;
+  height: 300px;
 }
