--- a/public/style.css
+++ b/public/style.css
@@ -207,3 +207,10 @@ label {
   border-top-width : 3px;
   height: 1000px;
 }
+
+#map {
+  height: 400px;
+  /* The height is 400 pixels */
+  width: 100%;
+  /* The width is the width of the web page */
+}
