--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,207 +1,110 @@
+/*-- Body Reset --*/
+
 body {
-  margin: 0;
-  font-family: 'Arvo', serif;
+  overflow-x: hidden;
+  font-family: 'Montserrat', sans-serif;
+  color: #616971;
 }
 
-.h1 {
-  font-size: 28px;
-  color: rgb(0, 0, 0);
+/*============= NAVIGATION =============*/
+
+.navbar-brand img {
+  height: 3rem;
 }
 
-.logo-container {
-  font-size: 28px;
+.navbar {
+  font-size: 1.15rem;
+  font-weight: 600;
+  letter-spacing: .1rem;
+  box-shadow: 0 0.5rem 0.5rem rgba(0, 0, 0, .1);
+  z-index: 1;
 }
 
-.header {
-  color: white;
-  background-color: rgb(0, 0, 0);
-  padding: 23px;
-  display: flex;
-  justify-content: space-between;
+.nav-item{
+  padding: .5rem;
 }
 
-.link-header-container {
-  display: inline;
+.nav-link{
+  color : #5b5555!important;
 }
 
-.link-header-item {
-  display: inline;
+/*===== FIXED BACKGROUND IMG =====*/
+
+.fixed-background {
+  overflow: hidden;
+  /*-- Correction for iOS --*/
 }
 
-.main-container {
-  width: 70%;
-  margin-top: 40px;
-  margin-bottom: 40px;
-  margin-left: auto;
-  margin-right: auto;
-  min-height: 90vh;
-  background-color: #eee;
+/*-- Emoji Navbar --*/
+
+/*============= FOOTER =============*/
+
+/*============= SOCKET =============*/
+
+/*============= MEDIA QUERIES =============*/
+
+/* Devices under 1199px (xl) */
+
+@media (max-width: 1199.98px) {}
+
+/* Devices under 768px (md) */
+
+@media (max-width: 767.98px) {}
+
+/*============ BOOTSTRAP BREAK POINTS:
+
+Extra small (xs) devices (portrait phones, less than 576px)
+No media query since this is the default in Bootstrap
+
+Small (sm) devices (landscape phones, 576px and up)
+@media (min-width: 576px) { ... }
+
+Medium (md) devices (tablets, 768px and up)
+@media (min-width: 768px) { ... }
+
+Large (lg) devices (desktops, 992px and up)
+@media (min-width: 992px) { ... }
+
+Extra (xl) large devices (large desktops, 1200px and up)
+@media (min-width: 1200px) { ... }
+
+=============*/
+
+/*-- Bootstrap Mobile Gutter Fix --*/
+
+.row, .container-fluid {
+  margin-left: 0px !important;
+  margin-right: 0px !important;
 }
 
-.topic-container {
-  list-style: none;
-  padding: 15px;
-}
+/*-- Fixed Background Image --*/
 
-.topic-item {
-  justify-content: space-between;
-  display: flex;
-  margin: 15px;
-  padding: 10px;
-  background-color: white;
-}
-
-.footer {
-  padding: 10px;
-  background-color: #ddd;
-}
-
-.person-item {
-  order: 2;
-  margin-left: 20px;
-}
-
-.comment-vote-container {
-  order: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  min-width: 70px;
-}
-
-.delete-form {
-  order: 2;
-  margin-left: 20px;
-}
-
-.person-container {
-  display: flex;
-  order: 1;
-}
-
-.fa-chevron-up {
-  color: red;
-}
-
-.topic-edit-form {
-  display: none;
-}
-
-.error {
-  color: red;
-  font-weight: bold;
-}
-
-a {
-  outline: none;
-  text-decoration: none;
-  display: inline-block;
-  margin-right: 0.625%;
-  text-align: center;
-  color: black;
-}
-
-li:last-child a {
-  margin-right: 0;
-}
-
-a:link, a:visited, a:focus {
-  background: rgb(255, 21, 255);
-}
-
-a:hover {
-  background: rgb(113, 2, 141);
-}
-
-a:active {
-  background: red;
-  color: white;
-}
-
-label {
-  display: inline-block;
-  width: 210px;
-  text-align: right;
-}
-
-.button1 {
-  background: transparent;
-  border: 2px solid #27ae60;
-  border-radius: 10px;
-  color: #27ae60;
-  padding: 5px 15px;
-  outline: none;
-  cursor: pointer;
-}
-
-* {
-  box-sizing: border-box;
-}
-
-/* Button used to open the contact form - fixed at the bottom of the page */
-
-/* The popup form - hidden by default */
-
-.form-popup {
-  display: none;
-  position: fixed;
-  bottom: 10;
-  right: 15px;
-  border: 3px solid #f1f1f1;
-  z-index: 9;
-}
-
-/* Add styles to the form container */
-
-.form-container {
-  max-width: 300px;
-  padding: 10px;
-  background-color: white;
-}
-
-/* Full-width input fields */
-
-.form-container input[type=text], .form-container input[type=password] {
+.fixed-background {
+  position: relative;
   width: 100%;
-  padding: 15px;
-  margin: 5px 0 22px 0;
-  border: none;
-  background: #f1f1f1;
+  z-index: 1000!important;
 }
 
-/* When the inputs get focus, do something */
-
-.form-container input[type=text]:focus, .form-container input[type=password]:focus {
-  background-color: #ddd;
-  outline: none;
+.fixed-wrap {
+  clip: rect(0, auto, auto, 0);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -999 !important;
 }
 
-/* Add a red background color to the cancel button */
-
-.form-container .cancel {
-  border: 2px solid red;
-  color: red;
-}
-
-/* Add some hover effects to buttons */
-
-.form-container .btn:hover, .open-button:hover {
-  opacity: 1;
-}
-
-.wrapper {
-  height: 600px;
-}
-
-#jrange input {
-  width: 200px;
-}
-
-#jrange div {
-  font-size: 9pt;
-}
-
-.event a {
-  background-color: red !important;
-  color: white !important;
+.fixed {
+  z-index: -999!important;
+  display: block;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-position: center center;
+  -webkit-transform: translateZ(0);
+  transform: translateZ(0);
+  will-change: transform;
 }
