--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -8,40 +8,114 @@ body {
 
 /*============= NAVIGATION =============*/
 
+.search-box {
+  position: relative;
+}
+
+.search-box input {
+  padding-right: 35px;
+  min-height: 38px;
+  border: none;
+  background: lightgrey;
+  border-radius: 3px !important;
+}
+
+.search-box input:focus {
+  background: #fff;
+  box-shadow: none;
+}
+
+.search-box i {
+  color: #a0a5b1;
+  font-size: 19px;
+}
+
 .navbar-brand img {
   height: 3rem;
 }
 
 .navbar {
-  font-size: 1.15rem;
+  font-size: 1rem;
   font-weight: 600;
   letter-spacing: .1rem;
+  text-align: center;
   box-shadow: 0 0.5rem 0.5rem rgba(0, 0, 0, .1);
   z-index: 1;
 }
 
-.nav-item{
+.nav-item {
   padding: .5rem;
 }
 
-.nav-link{
-  color : #5b5555!important;
+.navbar .nav-item i {
+  font-size: 2rem;
+  line-height: 1.2;
 }
 
-/*===== FIXED BACKGROUND IMG =====*/
-
-.fixed-background {
-  overflow: hidden;
-  /*-- Correction for iOS --*/
+a.dropdown-toggle{
+  padding-top: 25%;
 }
 
-/*-- Emoji Navbar --*/
+.navbar .navbar-nav>li>a>i {
+  font-size: 3rem;
+  display: block;
+  text-align: center;
+}
 
-/*============= FOOTER =============*/
+.nav-link {
+  color: #5b5555!important;
+}
 
-/*============= SOCKET =============*/
+/* Button used to open the contact form - fixed at the bottom of the page */
 
-/*============= MEDIA QUERIES =============*/
+/* The popup form - hidden by default */
+
+.form-popup {
+  display: none;
+  position: fixed;
+  bottom: 10;
+  right: 15px;
+  border: 3px solid #f1f1f1;
+  z-index: 9;
+}
+
+/* Add styles to the form container */
+
+.form-container {
+  max-width: 300px;
+  padding: 10px;
+  background-color: white;
+}
+
+/* Full-width input fields */
+
+.form-container input[type=text], .form-container input[type=password] {
+  width: 100%;
+  padding: 15px;
+  margin: 5px 0 22px 0;
+  border: none;
+  background: #f1f1f1;
+}
+
+/* When the inputs get focus, do something */
+
+.form-container input[type=text]:focus, .form-container input[type=password]:focus {
+  background-color: #ddd;
+  outline: none;
+}
+
+/* Add a red background color to the cancel button */
+
+.form-container .cancel {
+  border: 2px solid red;
+  color: red;
+}
+
+/* Add some hover effects to buttons */
+
+.form-container .btn:hover, .open-button:hover {
+  opacity: 1;
+}
 
 /* Devices under 1199px (xl) */
 
@@ -107,4 +181,14 @@ Extra (xl) large devices (large desktops, 1200px and up)
   -webkit-transform: translateZ(0);
   transform: translateZ(0);
   will-change: transform;
+}
+
+.main-container {
+  width: 70%;
+  margin-top: 40px;
+  margin-bottom: 40px;
+  margin-left: auto;
+  margin-right: auto;
+  min-height: 90vh;
+  background-color: #eee;
 }
